# PAC

./: Makefile  README.md  current_issues.txt  tobuild.txt
data/: adaptive_acomms_left.csv  adaptive_acomms_middle.csv  adaptive_no_acomms_left.csv  adaptive_no_acomms_middle.csv  aggressive_lm_left.csv  aggressive_lm_middle.csv  best_adaptive_acomms_left_nav.alog  best_adaptive_acomms_left_rtk.alog  best_adaptive_acomms_left_seglist.alog  best_adaptive_acomms_left_sigma.alog  best_adaptive_acomms_middle_nav.alog  best_adaptive_acomms_middle_rtk.alog  best_adaptive_acomms_middle_seglist.alog  best_adaptive_acomms_middle_sigma.alog  best_adaptive_no_comms_left_nav.alog  best_adaptive_no_comms_left_rtk.alog  best_adaptive_no_comms_nav_middle.alog  best_adaptive_no_comms_rtk_middle.alog  best_aggressive_lm_left_nav.alog  best_aggressive_lm_left_rtk.alog  best_aggressive_lm_nav_middle.alog  best_aggressive_lm_rtk_middle.alog  best_conservative_lm_left_nav.alog  best_conservative_lm_left_rtk.alog  best_conservative_lm_nav_middle.alog  best_conservative_lm_rtk_middle.alog  conservative_lm_left.csv  conservative_lm_middle.csv
missions/: README.txt
missions/adaptive/: .LastOpenedMOOSLogDirectory  clean.sh
missions/adaptive/config/: AUV_1.def  common.def
missions/adaptive/plugs/: pAdaptiveSurveyPlanner.plug  pCoverageMap.plug  survey_down_leg.plug  survey_up_leg.plug
missions/adaptive/scripts/: vehicles_launch.sh
missions/adaptive_acomms/config/: AUV_1.def  AUV_2.def  common.def  latlong.def  sensors.def  shoreside.def
missions/basic_acomms/: .LastOpenedMOOSLogDirectory  sim_vehicle_launch.sh
missions/hover_adaptive_acomms/: .LastOpenedMOOSLogDirectory  README  hover_vehicle_launch.sh  launch_shore.sh  sim_shoreside_launch.sh  sim_vehicle_launch.sh
missions/no_acomms/: .LastOpenedMOOSLogDirectory  kill_all.sh  launch_all.sh
missions/playback/: .LastOpenedMOOSLogDirectory  README  playback_launch.sh
pAdaptiveSurveyPlanner/: CMakeLists.txt  README
pAdaptiveSurveyPlanner/src/: AdaptiveSurveyPlanner.cpp  AdaptiveSurveyPlanner.h  AdaptiveSurveyPlanner_Info.cpp  AdaptiveSurveyPlanner_Info.h  CMakeLists.txt  main.cpp  pAdaptiveSurveyPlanner.moos
pCoverageMap/: CMakeLists.txt  Makefile  README
pCoverageMap/src/: CMakeLists.txt  CoverageMap.cpp  CoverageMap.h  CoverageMap_Info.cpp  CoverageMap_Info.h  main.cpp  pCoverageMap.moos
probabilistic_coverage/: CMakeLists.txt  README
probabilistic_coverage/cmake/: FindMOOSIvP.cmake
probabilistic_coverage/src/: CMakeLists.txt  CoverageSensor.h  PDF.cpp  PDF.h  XYCoverageMap.cpp  XYCoverageMap.h  probabilistic_coverage.h
(+55 files in other folders)
